# AsyncClaw

./: .env.example  .gitignore  README.md  mcp.servers.github.example.json  pyproject.toml  requirements.txt
AsyncClaw/: __init__.py  config.py  providers.py  workspace.py
AsyncClaw/agent/: __init__.py  cron.py  events.py  llm.py  logger.py  loop.py  messages.py  runtime.py  skills.py  workspace.py
AsyncClaw/channels/: __init__.py  base.py  service.py
AsyncClaw/cli/: __init__.py  agent.py  logo.py  main.py
AsyncClaw/config/: __init__.py  llm.py  mcp.py  paths.py  providers.py
AsyncClaw/tools/: __init__.py  approval.py  base.py  context.py  executor.py  math_tools.py  mcp.py  providers.py  registry.py  safety.py  shell_exec.py  spec.py  time_tools.py
AsyncClaw/tools/builtin/: __init__.py  cron.py  math.py  memory.py  shell.py  skills.py  time.py  web.py
AsyncClaw/tools/mcp/: __init__.py  constants.py  naming.py  provider.py  response.py  result.py  streamable_http.py
evals/: cases.jsonl  implicit_cases.jsonl  run_eval.py
evals/results/: implicit_cases.jsonl  implicit_judged_cases.jsonl  implicit_judged_metrics.json  implicit_metrics.json  latest_cases.jsonl  metrics.json  real_metrics.json
evals/results/workspaces/20260526T110414Z/history/: user_inputs.jsonl
evals/results/workspaces/20260526T110414Z/memory/: user_profile.md
examples/: openai_agent.py
tests/: test_agent_loop.py  test_cli_service.py  test_cron.py  test_eval_runner.py  test_llm_provider_config.py  test_mcp_tools.py  test_shell_exec_tool.py  test_web_tools.py  test_workspace.py
(+13 files in other folders)
