[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncclaw"
version = "0.1.0"
description = "A small OpenAI-compatible ReAct agent runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
asyncclaw = "AsyncClaw.cli.main:main"

[tool.setuptools.packages.find]
include = ["AsyncClaw*"]
